<resources>
    <string name="app_name">TatvasooftAssignment6</string>


    <string name="valid_data">SignUp Successfully</string>
    <string name="err_name">Enter name</string>
    <string name="err_address">Enter address</string>
    <string name="err_dob">Select date of birth</string>
    <string name="err1_email">Enter email</string>
    <string name="err2_email">Enter valid email</string>
    <string name="err2_contact">Enter valid contact no.</string>
    <string name="err1_contact">Enter contact no.</string>
    <string name="err_gender">Select gender</string>
    <string name="err_country">Select country</string>
    <string name="err_hobby">Select atleast 1 hobby</string>
    <string name="gender">Gender</string>
...
